secret管理を改善

--- a/comfyui_colab_ipynb_V2.ipynb
+++ b/comfyui_colab_ipynb_V2.ipynb
@@ -230,9 +230,17 @@
         "# @title Model Downloads { form-width: \"900px\" }\n",
         "# Checkpoints\n",
         "\n",
+        "## get civitai token\n",
+        "import os\n",
+        "from google.colab import userdata\n",
+        "os.environ['CIVITAI_TOKEN'] = userdata.get('CIVITAI_TOKEN')\n",
+        "\n",
+        "token = os.environ['CIVITAI_TOKEN']\n",
+        "\n",
         "### SDXL\n",
         "### I recommend these workflow examples: https://comfyanonymous.github.io/ComfyUI_examples/sdxl/\n",
-        "!wget -c \"https://civitai.com/api/download/models/128078?type=Model&format=SafeTensor&size=pruned&fp=fp16&token=d3213e79a69ab67e3cf3299ce0933ef1\" -O ./models/checkpoints/sdxl_v10VAEFix.safetensors\n",
+        "sdxl_10_vae_url = f'https://civitai.com/api/download/models/128078?type=Model&format=SafeTensor&size=pruned&fp=fp16&token={token}'\n",
+        "!wget -c sdxl_10_vae_url -O ./models/checkpoints/sdxl_v10VAEFix.safetensors\n",
         "\n",
         "#!wget -c https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors -P ./models/checkpoints/\n",
         "#!wget -c https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0.safetensors -P ./models/checkpoints/\n",
@@ -252,7 +260,8 @@
         "!wget -c \"https://civitai.com/api/download/models/288911?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -O ./models/checkpoints/BEAUTY_BY_STABLE_YOG_v3_lcm.1_fp16.safetensors\n",
         "!wget -c \"https://civitai.com/api/download/models/375171?token=d3213e79a69ab67e3cf3299ce0933ef1\" -O ./models/checkpoints/again_mix.safetensors\n",
         "\n",
-        "!wget -c \"https://civitai.com/api/download/models/106905?type=Model&format=SafeTensor&size=pruned&fp=fp16&token=d3213e79a69ab67e3cf3299ce0933ef1\" -O ./models/checkpoints/sdhk_v40_chpt.safetensors\n",
+        "sdhk_v_40_chpt_url = f'https://civitai.com/api/download/models/106905?type=Model&format=SafeTensor&size=pruned&fp=fp16&token={token}'\n",
+        "!wget -c sdhk_v_40_chpt_url -O ./models/checkpoints/sdhk_v40_chpt.safetensors\n",
         "\n",
         "# SDXL ReVision\n",
         "#!wget -c https://huggingface.co/comfyanonymous/clip_vision_g/resolve/main/clip_vision_g.safetensors -P ./models/clip_vision/\n",
@@ -368,151 +377,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jjjjjjjjjjjjjj",
-        "outputId": "a7be1c6f-68af-4fc0-d6d0-184ddda39821"
+        "id": "jjjjjjjjjjjjjj"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-04-10 11:46:25--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
-            "Resolving github.com (github.com)... 20.205.243.166\n",
-            "Connecting to github.com (github.com)|20.205.243.166|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://github.com/cloudflare/cloudflared/releases/download/2024.4.0/cloudflared-linux-amd64.deb [following]\n",
-            "--2024-04-10 11:46:25--  https://github.com/cloudflare/cloudflared/releases/download/2024.4.0/cloudflared-linux-amd64.deb\n",
-            "Reusing existing connection to github.com:443.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/d6a3a887-324b-4579-abf9-a26762a05ed7?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240410%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240410T114625Z&X-Amz-Expires=300&X-Amz-Signature=e3850462a3fdf3c00f663840402e693dc68c763e7c59c4d3a3407c5c6822ef45&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=106867604&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64.deb&response-content-type=application%2Foctet-stream [following]\n",
-            "--2024-04-10 11:46:25--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/d6a3a887-324b-4579-abf9-a26762a05ed7?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240410%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240410T114625Z&X-Amz-Expires=300&X-Amz-Signature=e3850462a3fdf3c00f663840402e693dc68c763e7c59c4d3a3407c5c6822ef45&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=106867604&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64.deb&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 17782526 (17M) [application/octet-stream]\n",
-            "Saving to: ‘cloudflared-linux-amd64.deb.40’\n",
-            "\n",
-            "cloudflared-linux-a 100%[===================>]  16.96M  18.1MB/s    in 0.9s    \n",
-            "\n",
-            "2024-04-10 11:46:27 (18.1 MB/s) - ‘cloudflared-linux-amd64.deb.40’ saved [17782526/17782526]\n",
-            "\n",
-            "(Reading database ... 121756 files and directories currently installed.)\n",
-            "Preparing to unpack cloudflared-linux-amd64.deb ...\n",
-            "Unpacking cloudflared (2024.2.1) over (2024.2.1) ...\n",
-            "Setting up cloudflared (2024.2.1) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "** ComfyUI startup time: 2024-04-10 11:46:28.228018\n",
-            "** Platform: Linux\n",
-            "** Python version: 3.10.12 (main, Nov 20 2023, 15:14:05) [GCC 11.4.0]\n",
-            "** Python executable: /usr/bin/python3\n",
-            "** Log path: /content/drive/MyDrive/ComfyUI-V2/comfyui.log\n",
-            "\n",
-            "Prestartup times for custom nodes:\n",
-            "   0.0 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Manager\n",
-            "\n",
-            "Total VRAM 40514 MB, total RAM 85481 MB\n",
-            "WARNING[XFORMERS]: xFormers can't load C++/CUDA extensions. xFormers was built for:\n",
-            "    PyTorch 2.2.2+cu118 with CUDA 1108 (you have 2.2.2+cu121)\n",
-            "    Python  3.10.14 (you have 3.10.12)\n",
-            "  Please reinstall xformers (see https://github.com/facebookresearch/xformers#installing-xformers)\n",
-            "  Memory-efficient attention, SwiGLU, sparse and more won't be available.\n",
-            "  Set XFORMERS_MORE_DETAILS=1 for more details\n",
-            "2024-04-10 11:46:31.181833: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-            "2024-04-10 11:46:31.238364: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "2024-04-10 11:46:31.238413: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "2024-04-10 11:46:31.240050: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2024-04-10 11:46:31.248526: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2024-04-10 11:46:32.353017: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-            "xformers version: 0.0.25.post1+cu118\n",
-            "Set vram state to: NORMAL_VRAM\n",
-            "Device: cuda:0 NVIDIA A100-SXM4-40GB : cudaMallocAsync\n",
-            "VAE dtype: torch.bfloat16\n",
-            "Using pytorch cross attention\n",
-            "Adding extra search path checkpoints ../sd/stable-diffusion-webui/models/Stable-diffusion\n",
-            "Adding extra search path configs ../sd/stable-diffusion-webui/models/Stable-diffusion\n",
-            "Adding extra search path vae ../sd/stable-diffusion-webui/models/VAE\n",
-            "Adding extra search path loras ../sd/stable-diffusion-webui/models/Lora\n",
-            "Adding extra search path loras ../sd/stable-diffusion-webui/models/LyCORIS\n",
-            "Adding extra search path upscale_models ../sd/stable-diffusion-webui/models/ESRGAN\n",
-            "Adding extra search path upscale_models ../sd/stable-diffusion-webui/models/RealESRGAN\n",
-            "Adding extra search path upscale_models ../sd/stable-diffusion-webui/models/SwinIR\n",
-            "Adding extra search path embeddings ../sd/stable-diffusion-webui/embeddings\n",
-            "Adding extra search path hypernetworks ../sd/stable-diffusion-webui/models/hypernetworks\n",
-            "Adding extra search path controlnet ../sd/stable-diffusion-webui/models/ControlNet\n",
-            "### Loading: ComfyUI-Manager (V2.10)\n",
-            "### ComfyUI Revision: 2011 [10847dfa] | Released on '2024-02-23'\n",
-            "\u001b[36;20m[comfyui_controlnet_aux] | INFO -> Using ckpts path: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui_controlnet_aux/ckpts\u001b[0m\n",
-            "\u001b[36;20m[comfyui_controlnet_aux] | INFO -> Using symlinks: False\u001b[0m\n",
-            "\u001b[36;20m[comfyui_controlnet_aux] | INFO -> Using ort providers: ['CUDAExecutionProvider', 'DirectMLExecutionProvider', 'OpenVINOExecutionProvider', 'ROCMExecutionProvider', 'CPUExecutionProvider', 'CoreMLExecutionProvider']\u001b[0m\n",
-            "[ComfyUI-Manager] default cache updated: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/custom-node-list.json\n",
-            "[ComfyUI-Manager] default cache updated: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/alter-list.json\n",
-            "[ComfyUI-Manager] default cache updated: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/extension-node-map.json\n",
-            "[ComfyUI-Manager] default cache updated: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/model-list.json\n",
-            "/content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui_controlnet_aux/node_wrappers/dwpose.py:26: UserWarning: DWPose: Onnxruntime not found or doesn't come with acceleration providers, switch to OpenCV with CPU device. DWPose might run very slowly\n",
-            "  warnings.warn(\"DWPose: Onnxruntime not found or doesn't come with acceleration providers, switch to OpenCV with CPU device. DWPose might run very slowly\")\n",
-            "### Loading: ComfyUI-Impact-Pack (V4.87)\n",
-            "[Impact Pack] ComfyUI is an outdated version. The DifferentialDiffusion feature will be disabled.\n",
-            "### Loading: ComfyUI-Impact-Pack (Subpack: V0.4)\n",
-            "[Impact Pack] ComfyUI is an outdated version. The DifferentialDiffusion feature will be disabled.\n",
-            "[Impact Pack] ComfyUI is an outdated version. The DifferentialDiffusion feature will be disabled.\n",
-            "[Impact Pack] ComfyUI is an outdated version. The DifferentialDiffusion feature will be disabled.\n",
-            "[Impact Pack] Wildcards loading done.\n",
-            "\u001b[0;33m[ReActor]\u001b[0m - \u001b[38;5;173mSTATUS\u001b[0m - \u001b[0;32mRunning v0.4.2-b1 in ComfyUI\u001b[0m\n",
-            "Torch version: 2.2.2+cu121\n",
-            "\u001b[0;33m[ReActor]\u001b[0m - \u001b[38;5;173mSTATUS\u001b[0m - \u001b[0;32mRunning v0.4.1-b12 in ComfyUI\u001b[0m\n",
-            "Torch version: 2.2.2+cu121\n",
-            "\u001b[34mWAS Node Suite: \u001b[0mImporting styles from `/content/drive/MyDrive/ComfyUI-V2/styles.csv`.\u001b[0m\n",
-            "\u001b[34mWAS Node Suite: \u001b[0mStyles import complete.\u001b[0m\n",
-            "\u001b[34mWAS Node Suite: \u001b[0mOpenCV Python FFMPEG support is enabled\u001b[0m\n",
-            "\u001b[34mWAS Node Suite \u001b[93mWarning: \u001b[0m`ffmpeg_bin_path` is not set in `/content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui-was-node-suite/was_suite_config.json` config file. Will attempt to use system ffmpeg binaries if available.\u001b[0m\n",
-            "\u001b[34mWAS Node Suite: \u001b[0mFinished.\u001b[0m \u001b[32mLoaded\u001b[0m \u001b[0m211\u001b[0m \u001b[32mnodes successfully.\u001b[0m\n",
-            "\n",
-            "\t\u001b[3m\u001b[93m\"Believe in yourself, and the rest will fall into place.\"\u001b[0m\u001b[3m - Unknown\u001b[0m\n",
-            "\n",
-            "\n",
-            "Import times for custom nodes:\n",
-            "   0.0 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui-kj-nodes\n",
-            "   0.0 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Advanced-ControlNet\n",
-            "   0.1 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Custom-Scripts\n",
-            "   0.1 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-KJNodes\n",
-            "   0.2 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Manager\n",
-            "   0.4 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Impact-Pack\n",
-            "   0.6 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui-reactor-nodes\n",
-            "   0.7 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui-reactor-node\n",
-            "   1.0 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui_controlnet_aux\n",
-            "   2.0 seconds: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/comfyui-was-node-suite\n",
-            "\n",
-            "\n",
-            "ComfyUI finished loading, trying to launch cloudflared (if it gets stuck here cloudflared is having issues)\n",
-            "\n",
-            "This is the URL to access ComfyUI: https://volleyball-hh-opens-jenny.trycloudflare.com                                       |\n",
-            "FETCH DATA from: /content/drive/MyDrive/ComfyUI-V2/custom_nodes/ComfyUI-Manager/extension-node-map.json\n",
-            "got prompt\n",
-            "model_type EPS\n",
-            "adm 2816\n",
-            "Using pytorch attention in VAE\n",
-            "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
-            "Using pytorch attention in VAE\n",
-            "got prompt\n",
-            "clip missing: ['clip_l.text_projection', 'clip_l.logit_scale']\n",
-            "clip unexpected: ['clip_l.transformer.text_model.embeddings.position_ids']\n",
-            "Requested to load SDXLClipModel\n",
-            "Loading 1 new model\n",
-            "warning, embedding:EasyNegative, does not exist, ignoring\n",
-            "warning, embedding:EasyNegative, does not exist, ignoring\n",
-            "Requested to load SDXL\n",
-            "Loading 1 new model\n",
-            "100% 20/20 [00:03<00:00,  5.02it/s]\n",
-            "Requested to load AutoencoderKL\n",
-            "Loading 1 new model\n",
-            "Prompt executed in 13.71 seconds\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
         "!dpkg -i cloudflared-linux-amd64.deb\n",
