secret含めたURLフォーマットの修正

--- a/comfyui_colab_ipynb_V2.ipynb
+++ b/comfyui_colab_ipynb_V2.ipynb
@@ -240,7 +240,7 @@
         "### SDXL\n",
         "### I recommend these workflow examples: https://comfyanonymous.github.io/ComfyUI_examples/sdxl/\n",
         "sdxl_10_vae_url = f'https://civitai.com/api/download/models/128078?type=Model&format=SafeTensor&size=pruned&fp=fp16&token={token}'\n",
-        "!wget -c sdxl_10_vae_url -O ./models/checkpoints/sdxl_v10VAEFix.safetensors\n",
+        "!wget -c $sdxl_10_vae_url -O ./models/checkpoints/sdxl_v10VAEFix.safetensors\n",
         "\n",
         "#!wget -c https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors -P ./models/checkpoints/\n",
         "#!wget -c https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0.safetensors -P ./models/checkpoints/\n",
@@ -261,7 +261,7 @@
         "!wget -c \"https://civitai.com/api/download/models/375171?token=d3213e79a69ab67e3cf3299ce0933ef1\" -O ./models/checkpoints/again_mix.safetensors\n",
         "\n",
         "sdhk_v_40_chpt_url = f'https://civitai.com/api/download/models/106905?type=Model&format=SafeTensor&size=pruned&fp=fp16&token={token}'\n",
-        "!wget -c sdhk_v_40_chpt_url -O ./models/checkpoints/sdhk_v40_chpt.safetensors\n",
+        "!wget -c $sdhk_v_40_chpt_url -O ./models/checkpoints/sdhk_v40_chpt.safetensors\n",
         "\n",
         "# SDXL ReVision\n",
         "#!wget -c https://huggingface.co/comfyanonymous/clip_vision_g/resolve/main/clip_vision_g.safetensors -P ./models/clip_vision/\n",
